--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "axios": "^0.27.2",
+    "mongoose": "^6.5.2",
     "next": "latest",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "@types/node": "17.0.35",
